--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,23 @@
+
+
+@inproceedings{mohajeri2020,
+  title={Run, agent, run! architecture and benchmarking of actor-based agents},
+  author={Parizi, M. and Sileno, G. and van-Engers, T. and Klous, S.},
+  booktitle={Proceedings of the 10th ACM SIGPLAN International Workshop on Programming Based on Actors, Agents, and Decentralized Control},
+  pages={11--20},
+  year={2020}
+}
+
+@inproceedings{angiani2018,
+  title={Actors based agent modelling and simulation},
+  author={Angiani, G. and Fornacciari, P. and Lombardo, G. and Poggi, A. and Tomaiuolo, M.},
+  booktitle={International Conference on Practical Applications of Agents and Multi-Agent Systems},
+  pages={443--455},
+  year={2018},
+  organization={Springer}
+}
+
+
 @article{Bousquet2004,
 	title={Multi-agent simulations and ecosystem management: a review},
 	author={Bousquet, Fran{\c{c}}ois and Le Page, Christophe},
@@ -56,9 +76,12 @@
 } 
 
 @article{Campos, 
-	author = {Campos, Luciana M A and Dickman, Ronald and Graeff, Frederico G and Borges, Henrique E}, 
-	title = {{A concurrent, minimalist model for an embodied nervous system}} 
-} 
+	author = {Campos, L. and Dickman, R and Graeff, F. and Borges, H.}, 
+	title = {A concurrent, minimalist model for an embodied nervous system},
+	journal = {International Brazilian Meeting
+on Cognitive Science},
+	year = {2015}
+	} 
 
 @inproceedings{Friedlander2008,
   title={LIDA and a Theory of Mind},
@@ -74,7 +97,7 @@
 	author = {Maturana, H. R.}, 
 	title = {Everything is said by an observer},  
 	year = {1987}, 
-	journal = {THOMPSON, W.I. Gaia: a way of knowing. Political implications of the new biology}, 
+	journal = {Thompson, W.I. Gaia: a way of knowing. Political implications of the new biology}, 
 	publisher = {New York: Lindisfarne Press}, 
 	pages = "11--36" 
 } 
@@ -184,4 +207,81 @@
 	doi = {10.1002/cne.920180503},
 	pages = {459--482},
 	year = {1908},
+}
+
+@Article{math10030382,
+AUTHOR = {Leon, F.},
+TITLE = {{ActressMAS, a .NET Multi-Agent Framework Inspired by the Actor Model}},
+JOURNAL = {Mathematics},
+VOLUME = {10},
+YEAR = {2022},
+NUMBER = {3},
+ARTICLE-NUMBER = {382},
+DOI = {10.3390/math10030382}
+}
+
+
+@Article{Crafa,
+AUTHOR = {Crafa, S.},
+TITLE = {From agent-based modeling to actor-based reactive systems in the analysis of financial networks},
+JOURNAL = {Journal of Economic Interaction and Coordination},
+VOLUME = {16},
+YEAR = {2021},
+pages = {649-673},
+DOI = {https://doi.org/10.1007/s11403-021-00323-8}
+}
+
+@article{NGUYEN2021103143,
+title = {Optimizing the resource usage of actor-based systems},
+journal = {Journal of Network and Computer Applications},
+volume = {190},
+pages = {103143},
+year = {2021},
+issn = {1084-8045},
+doi = {https://doi.org/10.1016/j.jnca.2021.103143},
+author = {Nguyen, H. and Do, T. and Rotter, C.},
+}
+
+@article{STARZEC2019102573,
+title = {Distributed ant colony optimization based on actor model},
+journal = {Parallel Computing},
+volume = {90},
+pages = {102573},
+year = {2019},
+issn = {0167-8191},
+doi = {https://doi.org/10.1016/j.parco.2019.102573},
+author = {Starzec, M. and Starzec, G. and Byrski, A. and Turek, W.},
+}
+
+@InProceedings{idzik,
+author="Idzik, M.
+and Byrski, A.
+and Turek, W.
+and Kisiel-Dorohinicki, M.",
+title="Asynchronous Actor-Based Approach to Multiobjective Hierarchical Strategy",
+year="2020",
+publisher="Springer International Publishing",
+pages="172--185",
+doi = {https://doi.org/10.1007/978-3-030-50420-5_13}
+}
+
+@ARTICLE{9113746,
+  author={Cao, D. and Hu, W. and Zhao, J. and Huang, Q. and Chen, Z. and Blaabjerg, F.},
+  journal={IEEE Transactions on Power Systems}, 
+  title={{A Multi-Agent Deep Reinforcement Learning Based Voltage Regulation Using Coordinated PV Inverters}}, 
+  year={2020},
+  volume={35},
+  number={5},
+  pages={4120-4123},
+  doi={10.1109/TPWRS.2020.3000652}}
+  
+@article{LI2022117900,
+title = {Coordinated load frequency control of multi-area integrated energy system using multi-agent deep reinforcement learning},
+journal = {Applied Energy},
+volume = {306},
+pages = {117900},
+year = {2022},
+issn = {0306-2619},
+doi = {https://doi.org/10.1016/j.apenergy.2021.117900},
+author = {Li, J. and Yu, T. and Zhang, X.},
 }
